--- a/style.css
+++ b/style.css
@@ -5,55 +5,60 @@
   box-sizing: border-box;
   font-family: 'Ubuntu', sans-serif;
 }
+
 body{
   display: flex;
   padding: 0 10px;
   min-height: 100vh;
   align-items: center;
-  background: #00143D;
+  background: #8D53FF;
   justify-content: center;
 }
+
 ::selection{
   color: #fff;
   background: #3498DB;
 }
+
+img{
+  height: 150px;
+  margin:auto;
+  display: block;
+  margin-bottom: 50px;
+}
+
 .wrapper{
-  height: 300px;
-  max-width: 500px;
-  background: #17DFFF;
+  height: 550px;
+  max-width: 800px;
+  background: #00143D;
   border-radius: 30px;
   padding: 20px 25px 0;
   transition: height 0.2s ease;
   box-shadow: 0 15px 30px rgba(0,0,0,0.9);
 }
+
 .wrapper.active{
-  height: 530px;
+  height: 780px;
 }
+
 header h1{
   font-size: 21px;
   font-weight: 500;
   text-align: center;
-  color: #00143D;
-}
-header p{
-  margin-top: 5px;
-  color: #00143D;
-  font-size: 16px;
+  color: #ffff;
 }
 
-/* img {
-  width: 30%;
-  margin: auto;
-  display: flex;
-  align-items: center;
-  margin-top: 5%;
-  margin-bottom: 100%;
-  justify-content: center;
-}*/
+header p{
+  margin-top: 5px;
+  color: #ffff;
+  font-size: 16px;
+  text-align: center;
+}
 
 .wrapper .form{
   margin: 40px 0 30px;
 }
+
 .form :where(input, button){
   width: 100%;
   height: 70px;
@@ -62,23 +67,28 @@ header p{
   border-radius: 10px;
   transition: 0.1s ease;
 }
+
 .form input{
   font-size: 20px;
   padding: 0 20px;
-  border: 2px solid #00143D;
+  border: 2px solid #B9FD35;
 }
+
 .form input:focus{
   box-shadow: 0 3px 6px rgba(0,0,0,0.13);
 }
+
 .form input::placeholder{
-  color: #999;
+  color: rgb(212, 212, 212);
 }
+
 .form button{
-  color: #B9FD35;
+  color: #00143D;
   cursor: pointer;
-  margin-top: 20px;
+  margin-top: 30px;
+  margin-bottom: 30px;
   font-size: 20px;
-  background: #00143D;
+  background: #B9FD35;
 }
 
 .btn {
@@ -98,13 +108,22 @@ header p{
   pointer-events: none;
   justify-content: center;
 }
+
 .wrapper.active .qr-code{
   opacity: 1;
   pointer-events: auto;
   transition: opacity 0.5s 0.05s ease;
 }
+
 .qr-code img{
   width: 150px;
+}
+
+p#info{
+  text-align: center;
+  font-style:inherit;
+  font-size: 21px;
+  color: #17DFFF;
 }
 
 @media (max-width: 500px){
@@ -113,7 +132,7 @@ header p{
     padding: 16px 20px;
   }
   .wrapper.active{
-    height: 650px;
+    height: 780px;
   }
   header p{
     color: #696969;
@@ -122,6 +141,6 @@ header p{
     height: 52px;
   }
   .qr-code img{
-    width: 200px;
+    width: 220px;
   }  
 }
